--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         </div>
         <div class="main_header" ">
             <div class=" wrap_container">
+                <video id="video" class="video" autoplay muted loop>
+                    <source id="video-src" src="./video/main.mp4" type="video/mp4" />
+                </video>
+                <div class="effects"></div>
             <div class=" offset-md-6 col-md-6">
                 <div class="header_title">
                     <h1>NIRVEL PROFESSIONAL</h1>
@@ -69,7 +73,7 @@
         </div>
         </div>
     </header>
-    <section id="produck">
+    <section id="produck" class="probuct">
         <div class="wrap_container">
             <div class="title_section">
                 <h2>ПРОДУКЦИЯ NIRVEL PROFESSIONAL</h2>
@@ -100,8 +104,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">Slide 2</div>
-                        <div class="swiper-slide">Slide 3</div>
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
@@ -178,18 +180,14 @@
                                     <p> <strong> Палитра:</strong> 70+ оттенков. <br>
                                         <strong> Объем: </strong> 100 мл. <br>
                                         <strong> Пропорция: </strong>
-                                        1:1,5 (100 мл. красителя + 150 мл. окислителя)
+                                        1:1,5 (100 мл. красителя + 150 мл. окислителя) 
                                     </p>
                                 </div>
                                 <div class="tab_color_decsription">
-                                    <p> Уникальная формула красителя ArtX обеспечивает глубокое проникновение пигментов,
-                                        которая
-                                        дает
-                                        100%
-                                        покрытие седины
-                                        и длительную стойкость цвета.
-                                        Ухаживающие компоненты защищают волосы
-                                        во время окрашивания, гарантируют великолепное качество, мягкость, блеск волос.
+                                    <p> Краситель нового поколения без содержания аммиака и П-фенилендиамина (PPD). Разработан на основе аргинина, масла жожоба и комплекса
+                                        экстрактов растений. Краситель Nature восстанавливает и ухаживает за волосами в процессе окрашивания. Бивалентная (двухтипная) система
+                                        окрашивания позволяет использовать краситель как в полуперманентном, так и в стойком перманентном окрашивании волос.
+                                        
                                     </p>
                                 </div>
                             </div>
@@ -209,21 +207,16 @@
                                 <h3>Профессиональный полуперманентный краситель для мужчин</h3>
                                 <hr>
                                 <div class="tab_color_formula">
-                                    <p> <strong> Палитра:</strong> 70+ оттенков. <br>
-                                        <strong> Объем: </strong> 100 мл. <br>
+                                    <p> <strong> Палитра:</strong> 4 оттенка.  <br>
+                                        <strong> Объем: </strong> краситель 30 мл +окислитель 6% 30мл.  <br>
                                         <strong> Пропорция: </strong>
-                                        1:1,5 (100 мл. красителя + 150 мл. окислителя)
+                                        1:1 (30 мл. красителя + 30 мл. окислителя)
                                     </p>
                                 </div>
                                 <div class="tab_color_decsription">
-                                    <p> Уникальная формула красителя ArtX обеспечивает глубокое проникновение пигментов,
-                                        которая
-                                        дает
-                                        100%
-                                        покрытие седины
-                                        и длительную стойкость цвета.
-                                        Ухаживающие компоненты защищают волосы
-                                        во время окрашивания, гарантируют великолепное качество, мягкость, блеск волос.
+                                    <p> Мужской "камуфляж" для волос помогает маскировать  седину без эффекта «отросших» корней и шокирующих перемен в цвете всего за 5 - 10 минут.
+                                        Краситель наносится прямо в мойке с помощью аппликатора. Входящие в состав аргинин и масло макадамии ухаживают за волосами. Аргинин сокращает время воздействия до минимальных 5-10минут.
+                                        
                                     </p>
                                 </div>
                             </div>
@@ -243,21 +236,19 @@
                                 <h3>Красящие гель-маски с пигментами прямого действия</h3>
                                 <hr>
                                 <div class="tab_color_formula">
-                                    <p> <strong> Палитра:</strong> 70+ оттенков. <br>
-                                        <strong> Объем: </strong> 100 мл. <br>
+                                    <p> <strong> Палитра:</strong> 31 оттенок <br>
+                                        <strong> Объем: </strong> 200 мл. <br>
                                         <strong> Пропорция: </strong>
-                                        1:1,5 (100 мл. красителя + 150 мл. окислителя)
+                                        без окислителя
                                     </p>
                                 </div>
                                 <div class="tab_color_decsription">
-                                    <p> Уникальная формула красителя ArtX обеспечивает глубокое проникновение пигментов,
-                                        которая
-                                        дает
-                                        100%
-                                        покрытие седины
-                                        и длительную стойкость цвета.
-                                        Ухаживающие компоненты защищают волосы
-                                        во время окрашивания, гарантируют великолепное качество, мягкость, блеск волос.
+                                    <p> Красящие гель-маски позволяют придать оттенок или цвет 
+                                        волосам, насыщают структуру питательными веществами,
+                                        выравнивая стержень волос. Образуют на поверхности защитную мембрану, придавая 
+                                        блеск, удерживают влагу и увеличивают плотность волос. Большой выбор оттенков помогает 
+                                        получить креативные, повседневные и пастельные цвета. Все оттенки смешиваются между 
+                                        собой, расширяя возможности для творчества.
                                     </p>
                                 </div>
                             </div>
@@ -267,31 +258,27 @@
                 <div class="tab-pane fade" id="nav-deco-color" role="tabpanel" aria-labelledby="nutre-deco-tab">
                     <div class="tab_content_color">
                         <div class="tab_color_contetnt">
-                            <a class="image-popup-vertical-fit" data-effect="mfp-zoom-in" href="./img/home_color.jpg"
+                            <a class="image-popup-vertical-fit" data-effect="mfp-zoom-in" href="./img/deco.png"
                                 title="Палитра красителя NATURA">
-                                <img src="./img/home_color.png">
+                                <img src="./img/deco.png">
                             </a>
                         </div>
                         <div class="tab_color_contetnt">
                             <div class="tab_text">
-                                <h3>Профессиональный полуперманентный краситель для мужчин</h3>
+                                <h3>Блондирующие препараты</h3>
                                 <hr>
                                 <div class="tab_color_formula">
-                                    <p> <strong> Палитра:</strong> 70+ оттенков. <br>
-                                        <strong> Объем: </strong> 100 мл. <br>
+                                    <p> <strong> Степень осветления:</strong> до 9 уровней тона <br>
+                                        <strong> Объем: </strong> 15-500гр. <br>
                                         <strong> Пропорция: </strong>
-                                        1:1,5 (100 мл. красителя + 150 мл. окислителя)
+                                        1:1,5, 1:2 – в зависимости от продукта
                                     </p>
                                 </div>
                                 <div class="tab_color_decsription">
-                                    <p> Уникальная формула красителя ArtX обеспечивает глубокое проникновение пигментов,
-                                        которая
-                                        дает
-                                        100%
-                                        покрытие седины
-                                        и длительную стойкость цвета.
-                                        Ухаживающие компоненты защищают волосы
-                                        во время окрашивания, гарантируют великолепное качество, мягкость, блеск волос.
+                                    <p> Профессиональные средства для обесцвечивания волос. 
+                                        Идеально подобранные составы препаратов направлены на сохранение жизненной 
+                                        силы и качества волос. Активные компоненты позволяют получить максимально 
+                                        сбалансированное блондирование без травмирования кожи головы.
                                     </p>
                                 </div>
                             </div>
