--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                     <source id="video-src" src="./video/main.mp4" type="video/mp4" />
                 </video>
                 <div class="effects"></div>
-            <div class=" offset-md-6 col-md-6">
+            <div class="col-md-12">
                 <div class="header_title">
                     <h1>NIRVEL PROFESSIONAL</h1>
                     <h4>Испанская профессиональная <br> косметика бизнес-класса по демократичной цене. </h4>
                     <ul>
-                        <li>География бренда 40+ стран мира</li>
-                        <li>10 000+ салонов используют в РФ</li>
-                        <li>10+ профессиональных линий косметики</li>
+                        География бренда 40+ стран мира <br>
+                        10 000+ салонов используют в РФ <br>
+                        10+ профессиональных линий косметики <br>
                     </ul>
                 </div>
                 <div class="bottom bootom_header">
