--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="main_header" ">
             <div class=" wrap_container">
                 <video id="video" class="video" autoplay muted loop>
-                    <source id="video-src" src="./video/main.mp4" type="video/mp4" />
+                    <source id="video-src" src="./video/The_Art_In_You_Collection.mp4" type="video/mp4" />
                 </video>
                 <div class="effects"></div>
             <div class="col-md-12">
@@ -469,7 +469,7 @@
                     <img src="./img/item_wath_6.png" alt="">
                     <div class="descrict_item">
                         <h4>Эксклюзивные условия для дистрибьюторов</h4>
-                        <p>Достойный заработок, единая ценовая политика, охрана интересов каждого дистрибьютара</p>
+                        <p>Достойный заработок, единая ценовая политика, охрана интересов каждого дистрибьютора</p>
                     </div>
                 </div>
             </div>
