--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         </div>
                         <div class="tab_color_contetnt">
                             <div class="tab_text">
-                                <h3>Перманентный краситель NATURA</h3>
+                                <h3>Перманентный краситель NATURE</h3>
                                 <hr>
                                 <div class="tab_color_formula">
                                     <p> <strong> Палитра:</strong> 70+ оттенков. <br>
@@ -204,7 +204,7 @@
                         </div>
                         <div class="tab_color_contetnt">
                             <div class="tab_text">
-                                <h3>Профессиональный полуперманентный краситель для мужчин</h3>
+                                <h3>Профессиональный полуперманентный краситель для мужчин HOMME</h3>
                                 <hr>
                                 <div class="tab_color_formula">
                                     <p> <strong> Палитра:</strong> 4 оттенка.  <br>
@@ -215,7 +215,8 @@
                                 </div>
                                 <div class="tab_color_decsription">
                                     <p> Мужской "камуфляж" для волос помогает маскировать  седину без эффекта «отросших» корней и шокирующих перемен в цвете всего за 5 - 10 минут.
-                                        Краситель наносится прямо в мойке с помощью аппликатора. Входящие в состав аргинин и масло макадамии ухаживают за волосами. Аргинин сокращает время воздействия до минимальных 5-10минут.
+                                        Краситель наносится прямо в мойке с помощью аппликатора. Входящие в состав аргинин и масло макадамии ухаживают за волосами. 
+                                        Аргинин сокращает время воздействия до минимальных 5-10 минут.
                                         
                                     </p>
                                 </div>
