--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home"
                             aria-selected="true">ARTX</button>
                         <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
-                            type="button" role="tab" aria-controls="nav-profile" aria-selected="false">NATURA</button>
+                            type="button" role="tab" aria-controls="nav-profile" aria-selected="false">NATURE</button>
                         <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
                             type="button" role="tab" aria-controls="nav-contact" aria-selected="false">HOMME</button>
                         <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab"
