--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </div>
         <div class="main_header" ">
             <div class=" wrap_container">
-                <video id="video" class="video" autoplay muted loop>
-                    <source id="video-src" src="./video/The_Art_In_You_Collection.mp4" type="video/mp4" />
-                </video>
-                <div class="effects"></div>
+            <video id="video" class="video" autoplay muted loop>
+                <source id="video-src" src="./video/The_Art_In_You_Collection.mp4" type="video/mp4" />
+            </video>
+            <div class="effects"></div>
             <div class="col-md-12">
                 <div class="header_title">
                     <h1>NIRVEL PROFESSIONAL</h1>
@@ -94,8 +94,133 @@
                                     <div class="descript_slider">
                                         <ul>
                                             <li>5 серий красителей</li>
-                                            <li>от 189 руб. стоимость РРЦ</li>
+                                            <li>от 150 руб. стоимость РРЦ</li>
                                             <li> адаптация косметики для РФ</li>
+                                        </ul>
+                                    </div>
+                                    <div class="bottom">
+                                        <a href="https://nirvel.ru/catalog/color/" target="blank">НА ОФИЦИАЛЬНЫЙ
+                                            САЙТ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content">
+                                <div class="imges_slide">
+                                    <img src="./img/img_slide_2.png" alt="">
+                                </div>
+                                <div class="text_slide">
+                                    <h3>УХОД ЗА ВОЛОСАМИ</h3>
+                                    <div class="descript_slider">
+                                        <ul>
+                                            <li>активные растительные компоненты </li>
+                                            <li>средняя цена шампуня 300 руб.</li>
+                                            <li> гипоаллергенные отдушки</li>
+                                        </ul>
+                                    </div>
+                                    <div class="bottom">
+                                        <a href="https://nirvel.ru/catalog/basicare/" target="blank">НА ОФИЦИАЛЬНЫЙ
+                                            САЙТ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content">
+                                <div class="imges_slide">
+                                    <img src="./img/img_slide_5.png" alt="">
+                                </div>
+                                <div class="text_slide">
+                                    <h3>Терапия кожи головы</h3>
+                                    <div class="descript_slider">
+                                        <ul>
+                                            <li>комплексные решения выявленной проблемы </li>
+                                            <li>некомедогенные препараты</li>
+                                            <li>дерматологически сбалансированы</li>
+                                        </ul>
+                                    </div>
+                                    <div class="bottom">
+                                        <a href="https://nirvel.ru/catalog/care/" target="blank">НА ОФИЦИАЛЬНЫЙ САЙТ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content">
+                                <div class="imges_slide">
+                                    <img src="./img/img_slide_4.png" alt="">
+                                </div>
+                                <div class="text_slide">
+                                    <h3>Стайлинговые средства</h3>
+                                    <div class="descript_slider">
+                                        <ul>
+                                            <li>средняя цена лака для волос 358р </li>
+                                            <li>легкие парфюмерные отдушки</li>
+                                            <li>линия продуктов Vegan</li>
+                                        </ul>
+                                    </div>
+                                    <div class="bottom">
+                                        <a href="https://nirvel.ru/catalog/styling/" target="blank">НА ОФИЦИАЛЬНЫЙ
+                                            САЙТ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content">
+                                <div class="imges_slide">
+                                    <img src="./img/img_slide_3.png" alt="">
+                                </div>
+                                <div class="text_slide">
+                                    <h3>восстанавление волос</h3>
+                                    <div class="descript_slider">
+                                        <ul>
+                                            <li>себестоимость процедуры от 276р </li>
+                                            <li>высокий процент восстановления волос</li>
+                                            <li>видимый результат после 1-го применения</li>
+                                        </ul>
+                                    </div>
+                                    <div class="bottom">
+                                        <a href="https://nirvel.ru/catalog/care/filter/subsection-is-detox_programme_programma_protiv_seborei_i_razdrazhennoy_kozhi_golovy/"
+                                            target="blank">НА ОФИЦИАЛЬНЫЙ САЙТ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content">
+                                <div class="imges_slide">
+                                    <img src="./img/img_slide_6.png" alt="">
+                                </div>
+                                <div class="text_slide">
+                                    <h3>Долговременная завивка</h3>
+                                    <div class="descript_slider">
+                                        <ul>
+                                            <li>себестоимость процедуры 280р </li>
+                                            <li>отсутствие формальдегидов</li>
+                                            <li>сохранение качества волос</li>
+                                        </ul>
+                                    </div>
+                                    <div class="bottom">
+                                        <a href="https://nirvel.ru/catalog/technica/" target="blank">НА ОФИЦИАЛЬНЫЙ
+                                            САЙТ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content">
+                                <div class="imges_slide">
+                                    <img src="./img/img_slide_7.png" alt="">
+                                </div>
+                                <div class="text_slide">
+                                    <h3>Мужская серия</h3>
+                                    <div class="descript_slider">
+                                        <ul>
+                                            <li>отсутствие эффекта отросших волос(камуфляж) </li>
+                                            <li>натуральные компоненты</li>
+                                            <li>приятный тонкий аромат</li>
                                         </ul>
                                     </div>
                                     <div class="bottom">
@@ -180,14 +305,17 @@
                                     <p> <strong> Палитра:</strong> 70+ оттенков. <br>
                                         <strong> Объем: </strong> 100 мл. <br>
                                         <strong> Пропорция: </strong>
-                                        1:1,5 (100 мл. красителя + 150 мл. окислителя) 
+                                        1:1,5 (100 мл. красителя + 150 мл. окислителя)
                                     </p>
                                 </div>
                                 <div class="tab_color_decsription">
-                                    <p> Краситель нового поколения без содержания аммиака и П-фенилендиамина (PPD). Разработан на основе аргинина, масла жожоба и комплекса
-                                        экстрактов растений. Краситель Nature восстанавливает и ухаживает за волосами в процессе окрашивания. Бивалентная (двухтипная) система
-                                        окрашивания позволяет использовать краситель как в полуперманентном, так и в стойком перманентном окрашивании волос.
-                                        
+                                    <p> Краситель нового поколения без содержания аммиака и П-фенилендиамина (PPD).
+                                        Разработан на основе аргинина, масла жожоба и комплекса
+                                        экстрактов растений. Краситель Nature восстанавливает и ухаживает за волосами в
+                                        процессе окрашивания. Бивалентная (двухтипная) система
+                                        окрашивания позволяет использовать краситель как в полуперманентном, так и в
+                                        стойком перманентном окрашивании волос.
+
                                     </p>
                                 </div>
                             </div>
@@ -207,17 +335,19 @@
                                 <h3>Профессиональный полуперманентный краситель для мужчин HOMME</h3>
                                 <hr>
                                 <div class="tab_color_formula">
-                                    <p> <strong> Палитра:</strong> 4 оттенка.  <br>
-                                        <strong> Объем: </strong> краситель 30 мл +окислитель 6% 30мл.  <br>
+                                    <p> <strong> Палитра:</strong> 4 оттенка. <br>
+                                        <strong> Объем: </strong> краситель 30 мл +окислитель 6% 30мл. <br>
                                         <strong> Пропорция: </strong>
                                         1:1 (30 мл. красителя + 30 мл. окислителя)
                                     </p>
                                 </div>
                                 <div class="tab_color_decsription">
-                                    <p> Мужской "камуфляж" для волос помогает маскировать  седину без эффекта «отросших» корней и шокирующих перемен в цвете всего за 5 - 10 минут.
-                                        Краситель наносится прямо в мойке с помощью аппликатора. Входящие в состав аргинин и масло макадамии ухаживают за волосами. 
+                                    <p> Мужской "камуфляж" для волос помогает маскировать седину без эффекта «отросших»
+                                        корней и шокирующих перемен в цвете всего за 5 - 10 минут.
+                                        Краситель наносится прямо в мойке с помощью аппликатора. Входящие в состав
+                                        аргинин и масло макадамии ухаживают за волосами.
                                         Аргинин сокращает время воздействия до минимальных 5-10 минут.
-                                        
+
                                     </p>
                                 </div>
                             </div>
@@ -244,11 +374,13 @@
                                     </p>
                                 </div>
                                 <div class="tab_color_decsription">
-                                    <p> Красящие гель-маски позволяют придать оттенок или цвет 
+                                    <p> Красящие гель-маски позволяют придать оттенок или цвет
                                         волосам, насыщают структуру питательными веществами,
-                                        выравнивая стержень волос. Образуют на поверхности защитную мембрану, придавая 
-                                        блеск, удерживают влагу и увеличивают плотность волос. Большой выбор оттенков помогает 
-                                        получить креативные, повседневные и пастельные цвета. Все оттенки смешиваются между 
+                                        выравнивая стержень волос. Образуют на поверхности защитную мембрану, придавая
+                                        блеск, удерживают влагу и увеличивают плотность волос. Большой выбор оттенков
+                                        помогает
+                                        получить креативные, повседневные и пастельные цвета. Все оттенки смешиваются
+                                        между
                                         собой, расширяя возможности для творчества.
                                     </p>
                                 </div>
@@ -276,9 +408,9 @@
                                     </p>
                                 </div>
                                 <div class="tab_color_decsription">
-                                    <p> Профессиональные средства для обесцвечивания волос. 
-                                        Идеально подобранные составы препаратов направлены на сохранение жизненной 
-                                        силы и качества волос. Активные компоненты позволяют получить максимально 
+                                    <p> Профессиональные средства для обесцвечивания волос.
+                                        Идеально подобранные составы препаратов направлены на сохранение жизненной
+                                        силы и качества волос. Активные компоненты позволяют получить максимально
                                         сбалансированное блондирование без травмирования кожи головы.
                                     </p>
                                 </div>
