--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                     <h3>Мужская серия</h3>
                                     <div class="descript_slider">
                                         <ul>
-                                            <li>отсутствие эффекта отросших волос(камуфляж) </li>
+                                            <li>отсутствие эффекта отросших волос (камуфляж) </li>
                                             <li>натуральные компоненты</li>
                                             <li>приятный тонкий аромат</li>
                                         </ul>
@@ -896,6 +896,9 @@
     <script src="./common.js"></script>
     <script>
         var swiper = new Swiper(".mySwiper", {
+            autoplay: {
+                delay: 5000,
+            },
             scrollbar: {
                 el: ".swiper-scrollbar",
             },
