--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                     <div class="descript_slider">
                                         <ul>
                                             <li>5 серий красителей</li>
-                                            <li>от 240 руб. стоимость РРЦ</li>
+                                            <li>от 230 р. стоимость РРЦ</li>
                                             <li> адаптация косметики для РФ</li>
                                         </ul>
                                     </div>
@@ -116,7 +116,7 @@
                                     <div class="descript_slider">
                                         <ul>
                                             <li>активные растительные компоненты </li>
-                                            <li>средняя цена шампуня 300 руб.</li>
+                                            <li>средняя цена шампуня 380 р. (250мл).</li>
                                             <li> гипоаллергенные отдушки</li>
                                         </ul>
                                     </div>
@@ -156,7 +156,7 @@
                                     <h3>Стайлинговые средства</h3>
                                     <div class="descript_slider">
                                         <ul>
-                                            <li>средняя цена лака для волос 358р </li>
+                                            <li>средняя цена лака для волос 725 р. </li>
                                             <li>легкие парфюмерные отдушки</li>
                                             <li>линия продуктов Vegan</li>
                                         </ul>
@@ -177,7 +177,7 @@
                                     <h3>восстанавление волос</h3>
                                     <div class="descript_slider">
                                         <ul>
-                                            <li>себестоимость процедуры от 276р </li>
+                                            <li>себестоимость процедуры от 260 р. </li>
                                             <li>высокий процент восстановления волос</li>
                                             <li>видимый результат после 1-го применения</li>
                                         </ul>
@@ -198,7 +198,7 @@
                                     <h3>Долговременная завивка</h3>
                                     <div class="descript_slider">
                                         <ul>
-                                            <li>себестоимость процедуры 280р </li>
+                                            <li>себестоимость процедуры от 130 р </li>
                                             <li>отсутствие формальдегидов</li>
                                             <li>сохранение качества волос</li>
                                         </ul>
@@ -536,7 +536,7 @@
                     <div class="our_content_item_right">
                         <img src="./img/our_item_3.png" alt="">
                         <h5>Для предпринимателей
-                            и дистрибьютеров</h5>
+                            и дистрибьюторов</h5>
                         <p>Теx кто хочет заниматься реализацией качественного высокомаржинального продукта</p>
                     </div>
                     <div class="our_content_item_right">
