--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </ul>
                 </nav>
                 <div class="contacts">
-                    <a href="mailto:info@igrobeauty.ru">info@nirvel.ru</a>
+                    <a href="mailto:info@igrobeauty.ru">info@igrobeauty.ru</a>
                     <a href="https://nirvel.ru/" target="blank">nirvel.ru</a>
                     <div class="phone">
                         <a href="tel:+74951093333">+7 (495) 109-33-33</a>
@@ -571,7 +571,7 @@
                     <img src="./img/item_wath_2.png" alt="">
                     <div class="descrict_item">
                         <h4>Товар <br> в наличии</h4>
-                        <p>Имеем складские помещения общей площадью более 1000 м2, что позволяет нам поддерживать
+                        <p>Имеем складские помещения общей площадью более 2000 м2, что позволяет нам поддерживать
                             необходимый уровень остатков</p>
                     </div>
                 </div>
